--- a/4-finetune_model.ipynb
+++ b/4-finetune_model.ipynb
@@ -640,6 +640,11 @@
      "output_type": "execute_result"
     }
    ],
+"source": [
+    "# push to hub\n",
+    "username = \"shawhin\"\n",
+    "trainer.push_to_hub(f\"{username}/{finetuned_model_name}\")"
+   ]
   }
  ],
  "metadata": {
